--- a/StoryApp/en.lproj/MainStoryboard.storyboard
+++ b/StoryApp/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,104 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Story App View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="StoryAppViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zFz-fv-o4Z">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="submitStory:" destination="2" eventType="touchUpInside" id="dJv-f2-Q9d"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Character Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zPh-Nx-siZ">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hi2-zw-Nw5">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="138" id="vNB-S4-Gxx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="yOs-q9-NnI"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Tragedy Switch" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwn-bZ-xz8">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="To create a story, fill out the form ..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Sl-h5-RSP">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Story Generator 5000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELF-D9-1Hp">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="6M6-zK-WJc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yOs-q9-NnI" firstAttribute="top" secondItem="xwn-bZ-xz8" secondAttribute="top" type="default" id="491-a0-ZBp"/>
+                            <constraint firstItem="zPh-Nx-siZ" firstAttribute="top" secondItem="3" secondAttribute="top" constant="72" id="4FV-Ud-B9d"/>
+                            <constraint firstItem="zPh-Nx-siZ" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Bmf-B7-qnI"/>
+                            <constraint firstItem="ELF-D9-1Hp" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="CTE-Xt-ViK"/>
+                            <constraint firstAttribute="trailing" secondItem="yOs-q9-NnI" secondAttribute="trailing" constant="41" id="GzY-dZ-2Bs"/>
+                            <constraint firstItem="xwn-bZ-xz8" firstAttribute="top" secondItem="3" secondAttribute="top" constant="126" id="KH6-HT-xZl"/>
+                            <constraint firstItem="zFz-fv-o4Z" firstAttribute="top" secondItem="3" secondAttribute="top" constant="187" id="M1X-CT-Phs"/>
+                            <constraint firstItem="0Sl-h5-RSP" firstAttribute="top" secondItem="3" secondAttribute="top" constant="263" id="N7X-1w-Mgh"/>
+                            <constraint firstItem="ELF-D9-1Hp" firstAttribute="centerX" secondItem="zFz-fv-o4Z" secondAttribute="centerX" type="default" id="Nwa-Fx-9sk"/>
+                            <constraint firstItem="Hi2-zw-Nw5" firstAttribute="top" secondItem="3" secondAttribute="top" constant="68" id="aI1-b7-qDI"/>
+                            <constraint firstItem="xwn-bZ-xz8" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="30" id="cjS-ce-FOy"/>
+                            <constraint firstItem="0Sl-h5-RSP" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="lGa-jP-AWl"/>
+                            <constraint firstAttribute="trailing" secondItem="Hi2-zw-Nw5" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="mrb-Or-fgE"/>
+                            <constraint firstItem="zFz-fv-o4Z" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="ui2-Ys-V8X"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="charName" destination="Hi2-zw-Nw5" id="5jg-xh-olR"/>
+                        <outlet property="finalStory" destination="0Sl-h5-RSP" id="vvD-dL-fu7"/>
+                        <outlet property="isTragic" destination="yOs-q9-NnI" id="J6O-fl-VVQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="StoryAppViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StoryAppViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="submitStory:"/>
+                <relationship kind="outlet" name="charName" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="finalStory" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="isTragic" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
